WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27996
[V8] Fix an assert in WebCoreStringResource that causes worker script evaluation failed.
https://bugs.webkit.org/show_bug.cgi?id=27996
Summary
[V8] Fix an assert in WebCoreStringResource that causes worker script evaluat...
Jian Li
Reported
2009-08-04 14:24:42 PDT
There is an assert in WebCoreStringResource that causes worker script evaluation failed. We should check for the same thread, instead of the main thread, in WebCoreStringResource.
Attachments
Proposed Patch
(2.40 KB, patch)
2009-08-04 14:29 PDT
,
Jian Li
levin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jian Li
Comment 1
2009-08-04 14:29:44 PDT
Created
attachment 34087
[details]
Proposed Patch
David Levin
Comment 2
2009-08-04 14:41:59 PDT
Comment on
attachment 34087
[details]
Proposed Patch It would be nice to mention in the ChangeLog why this is needed. Even thought Chromium's workers only use v8 in a single thread, they don't use it on the main thread.
Jian Li
Comment 3
2009-08-04 15:52:47 PDT
Committed as
http://trac.webkit.org/changeset/46782
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug